[fix]:
 - фильтрация, пагинация
