# src/main/java/com/gearit/api/controller/userprovider/UserProviderController.java
@@ -1,9 +1,10 @@
 package com.gearit.api.controller.userprovider;
 
 import com.gearit.api.dto.view.UserProviderView;
+import com.gearit.api.entity.user.UserProvider;
 import com.gearit.api.service.user.UserProviderService;
 import com.gearit.api.utils.http.PageableRequest;
-import com.gearit.api.utils.http.ResponsePageable;
+import com.gearit.api.utils.http.PageableResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -23,11 +24,11 @@ public class UserProviderController {
     }
 
     @PostMapping
-    public ResponseEntity<ResponsePageable<UserProviderView>> getUserProviders(
-            @RequestBody PageableRequest request
+    public ResponseEntity<PageableResponse<UserProviderView>> getUserProviders(
+            @RequestBody PageableRequest<UserProvider> request
     ) {
         var userViews = userProviderService.getUserProviders(request);
-        var response = new ResponsePageable<>(userViews.getTotalElements(), userViews.getContent(), request);
+        var response = new PageableResponse<>(userViews.getTotalElements(), userViews.getContent(), request);
         return ResponseEntity.ok(response);
     }
 }
