# src/main/java/com/gearit/api/utils/http/PageableRequest.java
@@ -1,30 +1,80 @@
 package com.gearit.api.utils.http;
 
+import com.gearit.api.exception.WebClientException;
+import com.gearit.api.utils.http.filter.FilterContainer;
+import com.gearit.api.utils.http.filter.SingleFilter;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
 import lombok.Getter;
 import lombok.Setter;
-import org.apache.commons.lang3.math.NumberUtils;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.jpa.domain.Specification;
 
 @Getter
 @Setter
-public class PageableRequest {
+public class PageableRequest<T> {
 
-    private int page = NumberUtils.INTEGER_ONE;
-    private int size = 10;
+    private Integer page;
+    private Integer size;
+    private FilterContainer container;
 
-    public PageableRequest() {
-    }
-
-    public PageableRequest(int page, int size) {
+    public PageableRequest(Integer page, Integer size) {
         this.page = page;
         this.size = size;
     }
 
-    public int getOffset() {
+    public Integer getOffset() {
         return (page - 1) * size;
     }
 
     public PageRequest toPageable() {
         return PageRequest.of(page, size);
+    }
+
+    public Specification<T> toSpecification() {
+        return (root, criteriaQuery, criteriaBuilder) -> {
+            Predicate[] predicates = container.getFilters()
+                    .stream()
+                    .map((singleFilter) -> toPredicate(root, criteriaBuilder, singleFilter))
+                    .toArray(Predicate[]::new);
+
+            return criteriaBuilder.and(predicates);
+        };
+    }
+
+    /**
+     * Формирует Predicate по переданному условию.
+     */
+    private Predicate toPredicate(Root<T> root, CriteriaBuilder criteriaBuilder, SingleFilter filter) {
+        Predicate predicate;
+        try {
+            predicate = switch (filter.getCondition()) {
+                case EQUALS -> criteriaBuilder.equal(root.get(filter.getField()), filter.getValue());
+
+                case NOT_EQUALS -> criteriaBuilder.notEqual(root.get(filter.getField()), filter.getValue());
+
+                case GREATER_THAN ->
+                        criteriaBuilder.greaterThan(root.get(filter.getField()), (Integer) filter.getValue());
+
+                case LESS_THAN -> criteriaBuilder.lessThan(root.get(filter.getField()), (Integer) filter.getValue());
+
+                case CONTAINS -> criteriaBuilder.like(root.get(filter.getField()), "%" + filter.getValue() + "%");
+            };
+        } catch (Exception e) {
+            throw asWebClientException(
+                    String.format("Filter mapping error. Field: [%s], value: [%s]", filter.getField(), filter.getValue()),
+                    e.getMessage()
+            );
+        }
+
+        return predicate;
+    }
+
+    private WebClientException asWebClientException(String message, String extendedHelp) {
+        return new WebClientException(
+                message,
+                extendedHelp
+        );
     }
 }
