# src/main/java/com/gearit/api/utils/http/ResponsePageable.java
@@ -1,59 +1,0 @@
-package com.gearit.api.utils.http;
-
-import jakarta.persistence.criteria.Predicate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import lombok.Getter;
-import lombok.Setter;
-import org.springframework.data.jpa.domain.Specification;
-
-@Getter
-@Setter
-public class ResponsePageable<T> {
-
-    private Long records;
-    private List<T> items;
-    private int pages;
-    private int page;
-
-    private int recordFrom;
-    private int recordTo;
-
-    public ResponsePageable(int records, List<T> items, PageableRequest pageable) {
-        this((long) records, items, pageable);
-    }
-
-    public ResponsePageable(long records, List<T> items, PageableRequest pageable) {
-        this.records = records;
-        this.items = items;
-        this.pages = (int) Math.ceil((double) this.records / pageable.getSize());
-        this.page = pageable.getPage();
-        if (items.isEmpty()) {
-            this.recordFrom = 1;
-            this.recordTo = Math.toIntExact(this.records);
-        } else {
-            this.recordFrom = (this.page * pageable.getSize()) - pageable.getSize();
-            this.recordTo = Math.toIntExact((this.page == pages) ? this.records : (long) this.page * pageable.getSize());
-        }
-    }
-
-    private Specification<T> buildSpecification(Map<String, Object> filters) {
-        return (root, query, cb) -> {
-            List<Predicate> predicates = new ArrayList<>();
-
-            filters.forEach((key, value) -> {
-                if (value != null) {
-                    // пример: если строка – LIKE, иначе – EQUAL
-                    if (value instanceof String stringValue) {
-                        predicates.add(cb.like(cb.lower(root.get(key)), "%" + stringValue.toLowerCase() + "%"));
-                    } else {
-                        predicates.add(cb.equal(root.get(key), value));
-                    }
-                }
-            });
-
-            return cb.and(predicates.toArray(new Predicate[0]));
-        };
-    }
-}
