# src/main/java/com/gearit/api/utils/http/filter/SingleCondition.java
@@ -1,0 +1,9 @@
+package com.gearit.api.utils.http.filter;
+
+public enum SingleCondition {
+    EQUALS,
+    NOT_EQUALS,
+    GREATER_THAN,
+    LESS_THAN,
+    CONTAINS,
+}
